--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,5 @@ spring.datasource.password=labibahmed
 
 spring.jpa.hibernate.ddl-auto=update
 
-
-logging.level.org.springframework.web=DEBUG
+springdoc.api-docs.path=/api-docs
 
